--- a/locale/flarum-tags.yml
+++ b/locale/flarum-tags.yml
@@ -14,8 +14,8 @@ flarum-tags:
     # These translations are used in the Edit Tag modal dialog.
     edit_tag:
       color_label: 顏色
-      delete_tag_button: 刪除節點
-      delete_tag_confirmation: "確定要刪除此幾點？此節點下的貼文將不會被刪除。"
+      delete_tag_button: 刪除分類
+      delete_tag_confirmation: "確定要刪除此分類？此分類下的貼文將不會被刪除。"
       description_label: 說明
       hide_label: 從「全部貼文」中隱藏
       name_label: => flarum-tags.ref.name
@@ -26,30 +26,30 @@ flarum-tags:
 
     # These translations are used in the navigation bar.
     nav:
-      tags_button: 節點設定
-      tags_text: 管理論壇節點列表
+      tags_button: 分類設定
+      tags_text: 管理論壇分類列表
 
     # These translations are used in the Permissions page of the admin interface.
     permissions:
-      allow_edit_tags_label: 允許編輯節點
-      restrict_by_tag_heading: 按節點
-      tag_discussions_label: 更改節點
+      allow_edit_tags_label: 允許編輯分類
+      restrict_by_tag_heading: 按分類
+      tag_discussions_label: 更改分類
 
     # These translations are used in the Tag Settings modal dialog.
     tag_settings:
       range_separator_text: " 至 "
-      required_primary_heading: 主節點數量
-      required_primary_text: 設定貼文主節點數量範圍
-      required_secondary_heading: 次節點數量
-      required_secondary_text: 設定貼文次節點數量範圍
-      title: 節點設定
+      required_primary_heading: 主分類數量
+      required_primary_text: 設定貼文主分類數量範圍
+      required_secondary_heading: 次分類數量
+      required_secondary_text: 設定貼文次分類數量範圍
+      title: 分類設定
 
     # These translations are used in the Tags page.
     tags:
-      about_tags_text: "節點用於分類貼文。主節點類似於傳統論壇的板塊；次節點無層級或順序，可作為子分類。"
+      about_tags_text: "分類用於分類貼文。主分類類似於傳統論壇的板塊；次分類無層級或順序，可作為子分類。"
       create_tag_button: => flarum-tags.ref.create_tag
-      primary_heading: 主節點
-      secondary_heading: 次節點
+      primary_heading: 主分類
+      secondary_heading: 次分類
       settings_button: 設定
 
   # Translations in this namespace are used by the forum user interface.
@@ -57,31 +57,31 @@ flarum-tags:
 
     # These translations are used by the Choose Tags modal dialog.
     choose_tags:
-      choose_primary_placeholder: "選擇主節點|選擇 {count} 個主節點"
-      choose_secondary_placeholder: "選擇次節點|選擇 {count} 個次節點"
-      edit_title: "更改「{title}」的節點"
+      choose_primary_placeholder: "選擇主分類|選擇 {count} 個主分類"
+      choose_secondary_placeholder: "選擇次分類|選擇 {count} 個次分類"
+      edit_title: "更改「{title}」的分類"
       submit_button: => core.ref.okay
-      title: 選擇節點
+      title: 選擇分類
 
     # These translations are used by the composer when starting a discussion.
     composer_discussion:
-      choose_tags_link: 選擇節點
+      choose_tags_link: 選擇分類
 
     # These translations are used by the discussion control buttons.
     discussion_controls:
-      edit_tags_button: 編輯節點
+      edit_tags_button: 編輯分類
 
     # These translations are used on the index page, peripheral to the discussion list.
     index:
-      more_link: 更多節點...
+      more_link: 更多分類...
       tags_link: => flarum-tags.ref.tags
-      untagged_link: 移除節點
+      untagged_link: 移除分類
 
     # These translations are displayed between posts in the post stream.
     post_stream:
-      added_tags_text: "{username} 添加節點 {tagsAdded}"
-      added_and_removed_tags_text: "{username} 添加節點 {tagsAdded} 並移除節點 {tagsRemoved}"
-      removed_tags_text: "{username} 移除節點 {tagsRemoved}"
+      added_tags_text: "{username} 添加分類 {tagsAdded}"
+      added_and_removed_tags_text: "{username} 添加分類 {tagsAdded} 並移除分類 {tagsRemoved}"
+      removed_tags_text: "{username} 移除分類 {tagsRemoved}"
       tags_text: "{tags}|{tags}"
 
   # Translations in this namespace are used by the forum and admin interfaces.
@@ -96,6 +96,6 @@ flarum-tags:
 
   # Translations in this namespace are referenced by two or more unique keys.
   ref:
-    create_tag: 新增節點
-    name: 節點名稱
-    tags: 節點
+    create_tag: 新增分類
+    name: 分類名稱
+    tags: 分類
