--- a/locale/amaurycarrade-syndication.yml
+++ b/locale/amaurycarrade-syndication.yml
@@ -3,8 +3,8 @@ amaurycarrade-syndication:
     autodiscovery:
       forum_activity: "論壇貼文及回覆"
       forum_new_discussions: "論壇最新貼文"
-      tag_activity: "{tag} 節點貼文及回覆"
-      tag_new_discussions: "{tag} 節點最新貼文"
+      tag_activity: "{tag} 分類貼文及回覆"
+      tag_new_discussions: "{tag} 分類最新貼文"
       discussion_last_posts: "本帖中的回覆"
     feeds:
       titles:
@@ -12,10 +12,10 @@ amaurycarrade-syndication:
         main_subtitle: "論壇最新貼文及回覆"
         main_d_title: "{forum_name} 貼文"
         main_d_subtitle: "論壇最新貼文"
-        tag_title: "{tag} 節點貼文及回覆"
-        tag_subtitle: "{tag}」節點貼文及回覆"
-        tag_d_title: "{tag} 節點最新貼文"
-        tag_d_subtitle: "{tag} 節點最新貼文"
+        tag_title: "{tag} 分類貼文及回覆"
+        tag_subtitle: "{tag}」分類貼文及回覆"
+        tag_d_title: "{tag} 分類最新貼文"
+        tag_d_subtitle: "{tag} 分類最新貼文"
         discussion_title: "{discussion_name}"
         discussion_subtitle: "本帖中的回覆"
 
