--- a/locale/validation.yml
+++ b/locale/validation.yml
@@ -74,8 +74,8 @@ validation:
     content: 正文
     name_singular: 單數名稱
     name_plural: 複數名稱
-    tag_count_primary: 主節點數量
-    tag_count_secondary: 次節點數量
+    tag_count_primary: 主分類數量
+    tag_count_secondary: 次分類數量
 
   custom:
     username:
